--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
